--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif+Caption&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>One millions</title>
 </head>
@@ -53,41 +56,45 @@
             </p>
         </section>
 
-        <section id="involved">
-            <h2>GET INVOLVED</h2>
-            <div>
-                <div class="icone"><i class="fa-solid fa-user"></i></div>
-                <h3>STUDENTS</h3>
-                <p>Want to learn how code? Want to help us get 1,000,000 lines? Click the button below and we' ll
-                    let you know how to get involved.</p>
-                <button> Start Learning >></button>
 
-            </div>
-                
-            <div>
-                <div class="icone"><i class="fa-solid fa-pencil"></i></div>
-                <h3>EDUCATORS</h3>
-                <p>Want to bring this initiative to your school or institutuion? Awesome! Click the buttonbelow and
-                    we'll make it happen.
-                </p>
-                <button> Join The Initiative >></button>
-            </div>
-            <div>
-                <div class="icone"><i class="fa-solid fa-money-bill-1"></i></div>
-                <h3>SPONSORS</h3>
-                <p>We love all the support we get to help host more events, and empower more lives with the
-                    knowledge of
-                    coding. Click to get involved.
-                </p>
-                <button>Give Support >></button>
-            </div>
+        <section>
+            <h2>GET INVOLVED</h2>
+            <div class="corpse">
+                <div class="bloc">
+                    <div class="icone"><i class="fa-solid fa-user"></i></div>
+                    <h3>STUDENTS</h3>
+                    <p>Want to learn how to code? Want to help us get 1,000,000 lines? Click the button below and we' ll
+                        let you know how to get involved.</p>
+                    <button class="button2"> Start Learning >></button>
+
+                </div>
+
+                <div class="bloc">
+                    <div class="icone"><i class="fa-solid fa-pencil"></i></div>
+                    <h3>EDUCATORS</h3>
+                    <p>Want to bring this initiative to your school or institutuion? Awesome! Click the button below and
+                        we'll make it happen.
+                    </p>
+                    <button class="button2"> Join The Initiative >></button>
+                </div>
+                <div class="bloc">
+                    <div class="icone"><i class="fa-solid fa-money-bill-1"></i></div>
+                    <h3>SPONSORS</h3>
+                    <p>We love all the support we get to help host more events, and empower more lives with the
+                        knowledge of
+                        coding. Click to get involved.
+                    </p>
+                    <button class="button2">Give Support >></button>
+                </div>
             </div>
         </section>
 
     </main>
 
     <footer>
+        <div></div>
         <img src="/images/one-million-bottom-brand.png" alt="One million">
+        <div class="chevron"><i class="fa-solid fa-chevron-up"></i></div>
     </footer>
 </body>
 
