--- a/index.html
+++ b/index.html
@@ -7,53 +7,49 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif+Caption&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
+
     <title>One millions</title>
 </head>
 
 <body>
     <header>
-        <div class="Top">
-            <img src="/images/top-logo.png" alt="logo one million">
-            <ul>
-                <li><a href="#whoweare">WHO WE ARE</a> </li>
-                <li><a href="#involved">GET INVOLVED</a></li>
-            </ul>
-        </div>
-        <div class="header">
-            <h1>Our goal is to inspire<br>
-                Tallahassee to write 1,000,000<br>
-                lines of code_</h1>
-        </div>
-
-        <div>
-            <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by
-                <strong>CODE.org.</strong>&nbsp;
-                Milions of lines of
-                code are being written. In the capital of Florida, Tallahassee, the community is &nbsp;
-                taking the challenge and
-                our goals is to write 1,000,000 lines of code_
-            </p>
-
-        </div>
-        <div>
-            <button>Learn more >></button>
-        </div>
-
-        <div><img src="./images/code.png" alt="logo code"></div>
+        <img src="/images/top-logo.png" alt="logo one million">
+        <nav>
+            <a href="#whoweare">WHO WE ARE</a>
+            <a href="#involved">GET INVOLVED</a>
+        </nav>
     </header>
 
-    <main>
+    <section class="header">
+        <h1>Our goal is to inspire<br>
+            Tallahassee to write 1,000,000<br>
+            lines of code_
+        </h1>
+        <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by
+            <strong>CODE.org.</strong><br/>
+            Milions of lines of
+            code are being written. In the capital of Florida, Tallahassee, the community is <br/>
+            taking the challenge and our goals is to write 1,000,000 lines of code_
+        </p>
+        <button>Learn more >></button>
+        <img src="./images/code.png" alt="logo code">
+    </section>
 
-        <section id="whoweare">
-            <img src="./images/academy-brand-med.png" alt="">
+    <main>
+        <section class="whoweare">
+            <img src="./images/academy-brand-med.png" alt="logo-blason">
             <h2>WHO WE ARE</h2>
-            <p>We are MASSIVE Academy. We aim to improve education through both method - effective project-based
+            <p>We are <span>MASSIVE Academy</span>. We aim to improve education through both method - effective project-based<br/>
                 learning - and material - by teaching skills that are applicable to improving your life today.
             </p>
         </section>
 
-        <section id="involved">
+        <section class="involved">
             <h2>GET INVOLVED</h2>
             <div>
                 <div class="icone"><i class="fa-solid fa-user"></i></div>
@@ -63,7 +59,7 @@
                 <button> Start Learning >></button>
 
             </div>
-                
+
             <div>
                 <div class="icone"><i class="fa-solid fa-pencil"></i></div>
                 <h3>EDUCATORS</h3>
