--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                 <div class="bloc">
                     <div class="icone"><i class="fa-solid fa-user"></i></div>
                     <h3>STUDENTS</h3>
-                    <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we' ll
+                    <p>Want to learn how to code? Want to help us get to 1,000,000 lines? Click the button below and we'
+                        ll
                         let you know how to get involved.</p>
                     <button class="button2"> Start Learning >></button>
 
@@ -92,9 +93,10 @@
     </main>
 
     <footer>
-        <div></div>
         <img src="/images/one-million-bottom-brand.png" alt="One million">
-        <div class="chevron"><i class="fa-solid fa-chevron-up"></i></div>
+        <a href="#">
+            <div class="chevron"><i class="fa-solid fa-chevron-up"></i></div>
+        </a>
     </footer>
 </body>
 
