--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </header>
 
     <section class="header">
-        <h1>Our goal is to inspire<br>
-            Tallahassee to write 1,000,000<br>
+        <h1>Our goal is to inspire
+            Tallahassee to write 1,000,000
             lines of code_
         </h1>
         <p>All over the country people are taking the <strong>HOUR OF CODE</strong> challenge issued by
-            <strong>CODE.org.</strong><br/>
+            <strong>CODE.org.</strong>
             Milions of lines of
-            code are being written. In the capital of Florida, Tallahassee, the community is <br/>
+            code are being written. In the capital of Florida, Tallahassee, the community is
             taking the challenge and our goals is to write 1,000,000 lines of code_
         </p>
         <button>Learn more >></button>
@@ -45,7 +45,8 @@
         <section class="whoweare">
             <img src="./images/academy-brand-med.png" alt="logo-blason">
             <h2>WHO WE ARE</h2>
-            <p>We are <span>MASSIVE Academy</span>. We aim to improve education through both method - effective project-based<br/>
+            <p>We are <span>MASSIVE Academy</span>. We aim to improve education through both method - effective
+                project-based<br />
                 learning - and material - by teaching skills that are applicable to improving your life today.
             </p>
         </section>
