rectification problème affichage

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <img src="/images/top-logo.png" alt="logo one million">
+        <img src="./images/top-logo.png" alt="logo one million">
         <nav>
             <a href="#whoweare">WHO WE ARE</a>
             <a href="#involved">GET INVOLVED</a>
@@ -92,7 +92,7 @@
     </main>
 
     <footer>
-        <img src="/images/one-million-bottom-brand.png" alt="One million">
+        <img src="./images/one-million-bottom-brand.png" alt="One million">
         <a href="#">
             <div class="chevron"><i class="fa-solid fa-chevron-up"></i></div>
         </a>
